--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <div class="step-content">
                     <div class="container">
                         <form id="step-3-form">
-                            <div class="required">Fields marked with asterisk (<span class="ast">*</span>) are required.</div>
+                            <div class="required">Fields marked with asterisk (<span class="ast">*</span>) are required.</div><br>
                             <div id="legalrep-container">
                                 <div id="legalrep-panel-container"></div>
                             <div class="alert" id="alert-norep">
