Updates to flow

--- a/chooser.html
+++ b/chooser.html
@@ -36,7 +36,8 @@
                     deceasedInfo: {
                         name: "Brian Proud",
                         sin: "*** *** 123",
-                        dateOfDeath: "2023-07-05"
+                        dateOfDeath: "2023-07-05",
+                        address:  "1234 Street Rd.<br>City ON A1B 1C3<br>Canada"
                     },
                     userLevel: 2,
                     racUserName: "Austin Holmes"
@@ -45,13 +46,10 @@
                     deceasedInfo: {
                         name: "Charles Jackson",
                         sin: "*** *** 234",
-                        dateOfDeath: "2023-12-07"
-                    },
-                    userLevel: 3,
-                    legalRepresentative: {
-                        name: "Hugh Jackson",
+                        dateOfDeath: "2023-12-07",
                         address: "20 Murphy Ave<br>Ottawa, Ontario K2J 1C9<br>Canada"
                     },
+                    userLevel: 3,
                     racUserName: "Hugh Jackson"
                 },
                 3: {
@@ -67,13 +65,10 @@
                     deceasedInfo: {
                         name: "Bill Miller",
                         sin: "*** *** 456",
-                        dateOfDeath: "2023-04-01"
-                    },
-                    userLevel: 3,
-                    legalRepresentative: {
-                        name: "John Miller",
+                        dateOfDeath: "2023-04-01",
                         address: "3330 Lanark Dr.<br>Lanark ON K6V 1D7<br>Canada"
                     },
+                    userLevel: 3,
                     racUserName: "John Miller"
 
                 },
@@ -81,13 +76,10 @@
                     deceasedInfo: {
                         name: "Greg Macdonald",
                         sin: "*** *** 567",
-                        dateOfDeath: "2023-02-02"
-                    },
-                    userLevel: 3,
-                    legalRepresentative: {
-                        name: "Nancy Macdonald",
+                        dateOfDeath: "2023-02-02",
                         address: "28 Chester St<br>Ottawa ON K2C 1A7<br>Canada"
                     },
+                    userLevel: 3,
                     racUserName: "Nancy Macdonald" 
 
                 }
