--- a/chooser.html
+++ b/chooser.html
@@ -32,12 +32,13 @@
     <script>
         function chooseTask(taskNumber) {
             const tasks = {
+
                 1: {
                     deceasedInfo: {
                         name: "Brian Proud",
                         sin: "*** *** 123",
                         dateOfDeath: "2023-07-05",
-                        address:  "1234 Street Rd.<br>City ON A1B 1C3<br>Canada"
+                        address:  "13 Slater St.<br>Ottawa ON K1A 1D7<br>Canada"
                     },
                     userLevel: 2,
                     racUserName: "Austin Holmes"
@@ -56,10 +57,11 @@
                     deceasedInfo: {
                         name: "Patricia William",
                         sin: "*** *** 345",
-                        dateOfDeath: "2023-08-31"
+                        dateOfDeath: "2023-08-31",
+                        address: "15 Lake Ave<br>Carleton Place, Ontario K7C 1A1<br>Canada"
                     },
-                    userLevel: 2,
-                    racUserName: "Benedict Smith"
+                    userLevel: 3,
+                    racUserName: "David William"
                 },
                 4: {
                     deceasedInfo: {
