--- a/index.html
+++ b/index.html
@@ -615,11 +615,12 @@
                             </div>
                         </fieldset>
                         <fieldset class="hidden" id="s4q3-fieldset">
-                            <label for="s4q3-field">Provide the reference/case number(s) associated to your submission</label>
-                            <span>Separate reference/case numbers using a comma.</span><br>
+                            <label for="s4q3-field" class="ml-16px">Provide the reference/case number(s) associated to your submission<br>
+                                <span class="optional">Separate reference/case numbers using a comma.</span>
+                            </label>
                             <input class="half-width" type="text" id="s4q3-field" name="s4q3">
                         </fieldset>
-                        <fieldset class="hidden" id="s4q4-fieldset" required>
+                        <fieldset class="ml-16 hidden" id="s4q4-fieldset" required>
                             <legend class="required-label" for="s4q3-field">Upload documents to support your request</legend>
                             
                             <table id="tb-upload-doc" class="table dynamic-table" cellpadding="0" cellspacing="0" required>
