Updates to surpress address on review

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="step-content">
                     <div class="container">
                         <form id="step-1-form">
-                            <div class="required">Fields marked with asterisk (<span class="ast">*</span>) are required.</div><br>
+                            <div class="required">Fields marked with asterisk (<span class="ast">*</span>) are required.</div>
                           
                             <fieldset id="s1q1-fieldset" data-radio-group>
                                 <legend class="required-label"> Has the final individual (T1) income tax return been filed?</legend>
