Fixed review step issues

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                                 <label class="required-label" for="s3-lvl3-reprole">Role</label>                        
                                 <select id="s3-lvl3-reprole" name="s3-lvl3-reprole">
                                     <option value="" selected>(Select)</option>
-                                    <option value="Executor/Executrix">Executor/Executrix</option>
+                                    <option value="Executor">Executor</option>
                                     <option value="Administrator">Administrator</option>
                                     <option value="Liquidator">Liquidator</option>
                                     <option value="Other">Other</option>
@@ -620,7 +620,7 @@
                             </label>
                             <input class="half-width" type="text" id="s4q3-field" name="s4q3">
                         </fieldset>
-                        <fieldset class="ml-16 hidden" id="s4q4-fieldset" required>
+                        <fieldset class="ml-16px hidden" id="s4q4-fieldset" required>
                             <legend class="required-label" for="s4q3-field">Upload documents to support your request</legend>
                             
                             <table id="tb-upload-doc" class="table dynamic-table" cellpadding="0" cellspacing="0" required>
@@ -661,8 +661,8 @@
                                     <div class="required">Fields marked with asterisk (<span class="ast">*</span>) are required.</div>
                                     <br>
                                     <label for="s4lb-upload" class="required-label">Upload your document</label>
-                                    Allowable file types: .pdf, .doc, .docx, .xls, .xlsx, .rtf, .txt, .jpg, .jpeg, .tiff, .tif, .xps
-                                    <br><button id="s4-browsebtn" type="button" class="btn-secondary">Browse</button>
+                                    <span class="ml-16px">Allowable file types: .pdf, .doc, .docx, .xls, .xlsx, .rtf, .txt, .jpg, .jpeg, .tiff, .tif, .xps
+                                    </span><br><button id="s4-browsebtn" type="button" class="ml-16px btn-secondary">Browse</button>
                                     <span class="fileName" id="s4-filename-display" data-formelement data-placeholder="No file chosen.">No file chosen.</span>
 
                                     <input type="hidden" id="s4-filename" name="s4-filename">
