Fixed swapped text for will & asset list

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <button type="button" class="accordion">Types of documents you should have </button>
                         <div class="accordion-content">
                             <ul>
-                                <li><strong>Taxpayer’s will:</strong> a detailed list and description of the assets that were owned by the deceased individual on the date of death, including:
+                                <li><strong>Taxpayer’s will:</strong> a complete and signed copy of the will, including any codicils, renunciations, disclaimers, and probate documents if applicable
                                     <ul>
                                         <li>If no will exists, an official document that names the legal representative</li>
                                     </ul>
                                 </li>
-                                <li><strong>List of assets:</strong> a complete and signed copy of the will, including any codicils, renunciations, disclaimers, and probate documents if applicable
+                                <li><strong>List of assets:</strong> a detailed list and description of the assets that were owned by the deceased individual on the date of death, including:
                                     <ul>
                                         <li>All assets that were held jointly</li>
                                         <li>All registered retirement savings plans (RRSP) and registered retirement income funds (including those with a named or designated beneficiary)</li>
@@ -567,12 +567,12 @@
                         <button type="button" class="accordion">Types of documents you should provide </button>
                         <div class="accordion-content">
                             <ul>
-                                <li><strong>Taxpayer’s will:</strong> a detailed list and description of the assets that were owned by the deceased individual on the date of death, including:
+                                <li><strong>Taxpayer’s will:</strong> a complete and signed copy of the will, including any codicils, renunciations, disclaimers, and probate documents if applicable
                                     <ul>
                                         <li>If no will exists, an official document that names the legal representative</li>
                                     </ul>
                                 </li>
-                                <li><strong>List of assets:</strong> a complete and signed copy of the will, including any codicils, renunciations, disclaimers, and probate documents if applicable
+                                <li><strong>List of assets:</strong> a detailed list and description of the assets that were owned by the deceased individual on the date of death, including:
                                     <ul>
                                         <li>All assets that were held jointly</li>
                                         <li>All registered retirement savings plans (RRSP) and registered retirement income funds (including those with a named or designated beneficiary)</li>
